--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                      <div class="row">
                         <div class="col-md-6">
                            <div class="container">
-                              <h1 class="banner_taital">Get Medical Care early</h1>
-                              <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                              <h1 class="banner_taital">I am an Industrial Design Engineer</h1>
+                              <p class="banner_text">Basically i am from Pakistan and i have done my Bachelor's in Agricultural Engineering, besides this i am a Youtuber and also works on blogger</p>
                               <div class="more_bt"><a href="#">Read More</a></div>
                            </div>
                         </div>
@@ -128,8 +128,8 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <h1 class="protect_taital">How to Protect Yourself</h1>
-                  <p class="protect_text">English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for</p>
+                  <h1 class="protect_taital">Work Experience</h1>
+                  <p class="protect_text">I was internee Engineer at JDW Sugar Mills for 6 weeks and now in my free time i work online as i mentioned above</p>
                </div>
             </div>
             <div class="protect_section_2 layout_padding">
