--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Convid</title>
+      <title>Shahar Yar Web Page</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -206,7 +206,7 @@
                      <div class="news_section_2 layout_padding">
                         <div class="box_main">
                            <div class="image_1"><img src="images/news-img.png"></div>
-                           <h2 class="design_text">Coronavirus is Very dangerous</h2>
+                           <h2 class="design_text">is Very dangerous</h2>
                            <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look</p>
                            <div class="read_btn"><a href="#">Read More</a></div>
                         </div>
