--- a/index.html
+++ b/index.html
@@ -255,14 +255,14 @@
             <div class="footer_section_2">
                <div class="row">
                   <div class="col-lg-3 col-sm-6">
-                     <h2 class="useful_text">Resources</h2>
+                     <h2 class="useful_text">Education & Skills</h2>
                      <div class="footer_menu">
                         <ul>
-                           <li><a href="#">What we do</a></li>
-                           <li><a href="#">Media</a></li>
-                           <li><a href="#">Travel Advice</a></li>
-                           <li><a href="#">Protection</a></li>
-                           <li><a href="#">Care</a></li>
+                           <li><a href="#">Agricultural Engineer</a></li>
+                           <li><a href="#">Farm Machinery & Power</a></li>
+                           <li><a href="#">Video Editor</a></li>
+                           <li><a href="#">Content Creator</a></li>
+                           <li><a href="#">Web Development</a></li>
                         </ul>
                      </div>
                   </div>
@@ -280,11 +280,11 @@
                            </li>
                            <li>
                               <a href="#"><i class="fa fa-phone" aria-hidden="true"></i>
-                              <span class="padding_15">Call +01 1234567890</span></a>
+                              <span class="padding_15">Call +86 17857298095</span></a>
                            </li>
                            <li>
                               <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>
-                              <span class="padding_15">demo@gmail.com</span></a>
+                              <span class="padding_15">engineershaharyar128@gmail.com</span></a>
                            </li>
                         </ul>
                      </div>
@@ -303,7 +303,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <p class="copyright_text">© 2020 All Rights Reserved.<a href="https://html.design"> Free  html Templates</a></p>
+                  <p class="copyright_text">© 2023 All Rights Reserved.<a href="https://html.design"> Technical Shaharyar</a></p>
                </div>
             </div>
          </div>
