--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                      <div class="row">
                         <div class="col-md-6">
                            <div class="container">
-                              <h1 class="banner_taital">Get Medical Care early</h1>
-                              <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                              <h1 class="banner_taital">I am Agricultural Engineer</h1>
+                              <p class="banner_text">I have done my Bachelor from University of Agriculture, Faisalabad</p>
                               <div class="more_bt"><a href="#">Read More</a></div>
                            </div>
                         </div>
@@ -100,8 +100,8 @@
                      <div class="row">
                         <div class="col-md-6">
                            <div class="container">
-                              <h1 class="banner_taital">Get Medical Care early</h1>
-                              <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                              <h1 class="banner_taital">Also a Youtuber</h1>
+                              <p class="banner_text">I am a technical problem solving content creator on Youtube.</p>
                               <div class="more_bt"><a href="#">Read More</a></div>
                            </div>
                         </div>
@@ -135,9 +135,9 @@
             <div class="protect_section_2 layout_padding">
                <div class="row">
                   <div class="col-md-6">
-                     <h1 class="hands_text"><a href="#">Wash your <br>hands frequently</a></h1>
-                     <h1 class="hands_text_2"><a href="#">Maintain social <br>distancing</a></h1>
-                     <h1 class="hands_text"><a href="#">Avoid touching eyes,<br>nose and mouth</a></h1>
+                     <h1 class="hands_text"><a href="#">BSc <br>Agricultural Engineering</a></h1>
+                     <h1 class="hands_text_2"><a href="#">Youtuber <br>Technical Shaharyar</a></h1>
+                     <h1 class="hands_text"><a href="#">Blogger<br>Web Development</a></h1>
                   </div>
                   <div class="col-md-6">
                      <div class="image_2"><img src="images/img-2.png"></div>
