--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="col-md-6">
                            <div class="container">
                               <h1 class="banner_taital">I am Agricultural Engineer</h1>
-                              <p class="banner_text">I have done my Bachelor from University of Agriculture, Faisalabad</p>
+                              <p class="banner_text">I have done my Bachelor from University of Agriculture, Faisalabad.</p>
                               <div class="more_bt"><a href="#">Read More</a></div>
                            </div>
                         </div>
@@ -303,7 +303,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <p class="copyright_text">© 2023 All Rights Reserved.<a href="https://html.design"> Technical Shaharyar</a></p>
+                  <p class="copyright_text">© 2023 All Rights Reserved.<a href="Shaharyarsoftwares.com"> Technical Shaharyar</a></p>
                </div>
             </div>
          </div>
